# VkEngine

./: CMakeLists.txt  LICENSE  README.md
Gears/: CMakeLists.txt
Gears/src/: main.cpp
VkEngine/: CMakeLists.txt
VkEngine/include/engine/: Buffer.hpp  EngineError.hpp  EngineResult.hpp  MemoryType.hpp  QueueFamilyIndexes.hpp  ShaderFile.hpp  ShaderModule.hpp  SwapchainDetails.hpp  VkEngineApp.hpp
VkEngine/include/engine/utils/: Result.hpp
VkEngine/src/engine/: Buffer.cpp  EngineError.cpp  MemoryType.cpp  QueueFamilyIndexes.cpp  ShaderFile.cpp  ShaderModule.cpp  SwapchainDetails.cpp  VkEngineApp.cpp
VkEngine/src/engine/utils/: Result.cpp
VkEngine/src/engine/vk/: proxies.cpp  proxies.hpp
